# SimLoom

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build.sh  clean.sh  docs.sh  flake.nix
mdrs/: hello_world.dox  index.dox
python/: main.py  scheduler.py
python/models/: example_model.py  hello_world.py
python/scenarios/: hello_world.py
scripts/: mdr_filter.py
src/message_bus/: CMakeLists.txt  message_bus.cpp  message_bus.hpp
src/models/: CMakeLists.txt  example_model.cpp  hello_world.cpp  model_interface.hpp
